--- a/src/main/webapp/i18n/de/userGatewayUserAccount.json
+++ b/src/main/webapp/i18n/de/userGatewayUserAccount.json
@@ -13,7 +13,7 @@
       "detail": {
         "title": "User Account"
       },
-      "fieldName": "Field Name",
+      "owner": "Owner",
       "keyCollection": "Key Collection"
     }
   },
